# dev_scan_app

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp  ref_scan.py  signatures.json  vcpkg.json
data/: 16435_1.rar  DIP — копия.doc  Diploma — копия.doc  Surely Doc — копия — копия — копия.doc
include/: ConfigLoader.h  Logger.h  ReportWriter.h  Scaner.h  Scanner.h  Signatures.h  TypeMap.h
include/generator/: Generator.h
include/generators/: FileType.h  TestDataGenerator.h
input/: file_10.ppt  file_13.doc  file_13.html  file_13.mkv  file_13.pptx  file_14.doc  file_14.docx  file_14.html  file_14.ppt  file_14.pptx  file_14.txt  file_14.xlsx  file_14.xml  file_15.docx  file_15.html  file_15.mkv  file_15.pptx  file_15.xlsx  file_15.xml  file_16.doc  file_16.docx  file_16.html  file_16.mkv  file_16.ppt  file_16.pptx  file_16.txt  file_16.xlsx  file_16.xml  file_2.mkv  file_3.pptx  file_4.xlsx  file_5.xml  file_6.xml  file_7.docx  file_8.mkv  file_8.txt  file_8.xlsx  file_8.xml  file_9.doc
src/: Scaner.cpp  Scanner.cpp
src/cli/: main_cli.cpp
src/generator/: Generator.cpp
tests/: Benchmarks.cpp  IntegrationTests.cpp  ScanerTests.cpp  ScannerTests.cpp
tools/: generate_dataset.cpp
